tests/macros/plugin/default.rs
fn main() {
    let q = discourse::questions![Plugin { default: todo!() }];
}
